--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,15 @@
 <body>
   <header></header>
   <script src="js/scripts.min.js"></script>
+  "
+    //= ./html/header.html
+    //= ./html/main-inform.html
+    //= ./html/about-me.html
+    //= ./html/skills.html
+    //= ./html/critaries.html
+    //= ./html/programm.html
+    //= ./html/details.html
+  "
 </body>
 
 </html>
