import html and scss file

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,12 @@
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="format-detection" content="telephone=no">
 
-  <title>Placeholder title</title>
+  <title>Best project</title>
   <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="scss/styles.scss">
 </head>
 
 <body>
-  <header></header>
-  <script src="js/scripts.min.js"></script>
-  "
     //= ./html/header.html
     //= ./html/main-inform.html
     //= ./html/about-me.html
@@ -31,7 +29,7 @@
     //= ./html/critaries.html
     //= ./html/programm.html
     //= ./html/details.html
-  "
+    <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
