--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
 
   <title>Best project</title>
   <link rel="stylesheet" href="css/styles.min.css">
-  <link rel="stylesheet" href="scss/styles.scss">
 </head>
 
 <body>
@@ -26,10 +25,10 @@
     //= ./html/main-inform.html
     //= ./html/about-me.html
     //= ./html/skills.html
-    //= ./html/critaries.html
+    //= ./html/cretaries.html
     //= ./html/programm.html
     //= ./html/details.html
-    <script src="js/scripts.min.js"></script>
+   <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
