add block programm

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -29,6 +29,7 @@
     //= ./html/programm.html
     //= ./html/details.html
    <script src="js/scripts.min.js"></script>
+   <script src="js/programm/slaider.js"></script>
 </body>
 
 </html>
