--- a/src/html/cretaries.html
+++ b/src/html/cretaries.html
@@ -5,40 +5,39 @@
     </div>
     <div class="cretaries__main">
       <div class="cretaries__media">
-        <img src="../images/categories-man.jpg" alt="" class="cretaries__photo">
+        <img src="../build/images/categories-man.jpg" alt="" class="cretaries__photo">
       </div>
-        <div class="container-1">
-
-          <div class="slider-1">
-            <div class="slider__wrapper-1">
-              <div class="slider__item-1">
-                <div class="slider__content-1">
-                  <p class="slider__text-1">Необходимы минимальные навыки владения компьютером — как работать в браузере, в офисных
+        <div class="container-2">
+          <div class="slider-2">
+            <div class="slider__wrapper-2">
+              <div class="slider__item-2">
+                <div class="slider__content-2">
+                  <p class="slider__text-2">Необходимы минимальные навыки владения компьютером — как работать в браузере, в офисных
                       приложениях. Также нужно быть готовым учиться и регулярно уделять время развитию сайта. Конечный результат
                         напрямую зависит от вас, и приложенных вами усилий.
                   </p>
                 </div>
               </div>
-              <div class="slider__item-1">
-                <div class="slider__content-1">
-                    <p class="slider__text-1">Это сайты, которые отвечают на вопросы людей. Например, сайт про рыбалку, 
+              <div class="slider__item-2">
+                <div class="slider__content-2">
+                    <p class="slider__text-2">Это сайты, которые отвечают на вопросы людей. Например, сайт про рыбалку, 
                       про строительство дома, про приложения для мобильных телефонов. Особенность таких сайтов — на них не 
                       продаются никакие товары, а деньги зарабатываются контекстной рекламой. При правильном подходе это хороший 
                       полупассивный способ заработка денег.
                     </p>
                 </div>
               </div>
-              <div class="slider__item-1">
-                <div class="slider__content-1">
-                  <p class="slider__text-1">
+              <div class="slider__item-2">
+                <div class="slider__content-2">
+                  <p class="slider__text-2">
                       Можно начать с одного сайта, и заниматься этим как хобби, получая дополнительный доход. А можно сделать 
                       много сайтов, и сделать это основным источником дохода.
                 </p>
                 </div>
               </div>
             </div>
-            <a class="slider__control-1 slider__control_left-1" href="#" role="button"></a>
-            <a class="slider__control-1 slider__control_right-1" href="#" role="button"></a>
+            <a class="slider__control-2 slider__control_left-2" href="#" type="button" role="button"></a>
+            <a class="slider__control-2 slider__control_right-2" href="#" type="button" role="button"></a>
           </div>
       
         </div>
