add update files

--- a/src/html/main-inform.html
+++ b/src/html/main-inform.html
@@ -1,16 +1,14 @@
 <section class="section__first">
     <div class="main__title--word">Курс</div>
-    <div class="programm__title">
-        <span>[Бизнес на информационных сайтах]</span>
-    </div>
+    <div class="inform__title"><span class="title__black">[Бизнес на</span><br><span class="title__black--second">информационных сайтах]</span></div>
     <div class="text__inform"> 
         <div class="icon__dash"></div>
         <p class="text__inform--description">Курс расскажет, как научиться делать информационные сайты, и зарабатывать на них.</p>
     </div>
     <div class="introduction__part">
-        <div class="picture"><img src="../images/Picture.jpg" alt="photo" width="416" height="459"></div>
-        <div class="icon__square"></div>
+        <div class="picture"><img class="picture__first" src="../images/Picture.jpg" alt="photo" width="416" height="459"></div>
         <div class="introduction__part--text">
+            <div class="icon__square"></div>
             <h2 class="subtitle">[Информационные сайты]</h2>
             <p class="general__inform">Это сайты, которые отвечают на вопросы людей. Например, сайт про рыбалку, про строительство дома, про приложения для мобильных телефонов. Особенность таких сайтов - на них не продаются никакие товары, а деньги зарабатываются контекстной рекламой. При правильном подходе это хороший полупассивный способ заработка денег.</p>
             <p class="general__inform--second">Можно начать с одного сайта, и заниматься этим как хобби, получая дополнительный доход. А можно сделать много сайтов, и сделать это основным источником дохода.</p>
