--- a/src/html/about-me.html
+++ b/src/html/about-me.html
@@ -29,8 +29,8 @@
               </div>
             </div>
           </div>
-          <a class="slider__control-1 slider__control_left-1" href="#" role="button"></a>
-          <a class="slider__control-1 slider__control_right-1" href="#" role="button"></a>
+          <a class="slider__control-1 slider__control_left-1"  role="button"></a>
+          <a class="slider__control-1 slider__control_right-1" role="button"></a>
         </div>
       </div>
   </div>
