--- a/src/html/cretaries.html
+++ b/src/html/cretaries.html
@@ -36,8 +36,8 @@
                 </div>
               </div>
             </div>
-            <a class="slider__control-2 slider__control_left-2" href="#" type="button" role="button"></a>
-            <a class="slider__control-2 slider__control_right-2" href="#" type="button" role="button"></a>
+            <a class="slider__control-2 slider__control_left-2"  type="button" role="button"></a>
+            <a class="slider__control-2 slider__control_right-2" type="button" role="button"></a>
           </div>
       
         </div>
