--- a/src/html/programm.html
+++ b/src/html/programm.html
@@ -161,7 +161,7 @@
             </div>
           </div>
         </div>
-        <a class="slider__control slider__control_left" href="#" role="button"></a>
-        <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+        <a class="slider__control slider__control_left"  role="button"></a>
+        <a class="slider__control slider__control_right slider__control_show" role="button"></a>
       </div>
 </section>
