--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,25 +1,25 @@
-<header class="page__header">
-    <a href="#" class="site__logo">
+<header class="headline__page">
+    <a href="#" class="headline__page--logo">
         <img src="../images/logo.png" alt="site logo" width="128" height="40">
     </a>
-    <nav class="page__nav container">
-        <div class="main__link">
-            <div class="icon icon--source"><img src="../images/Vector1.png" alt=""></div>
-            <a class="list__item--link" href="#">info@goit.ua</a>
+    <nav class="headline__page--nav">
+        <div class="nav__link">
+            <div class="nav__link--icon icon__source"><img class="icon" src="../images/Vector1.png" alt=""></div>
+            <a class="nav__link--item" href="#">info@goit.ua</a>
         </div>
-        <ul class="site__navigation">
-            <li class="list__item">
-                <div class="list__item--burger">
+        <ul class="contact__list">
+            <li class="contact__item list__item">
+                <div class="list__item--first">
                     <div class="icon"><img src="../images/Vector2.png" alt=""></div>
-                    <div class="burger__line">+38 (093) 343 21 27</div>
+                    <div class="first__line">+38 (093) 343 21 27</div>
                 </div>
-                <div class="list__item--burger">
+                <div class="list__item--second">
                     <div class="icon"><img src="../images/Vector2.png" alt=""></div>
-                    <div class="burger__line">+38 (067) 326 95 92</div>
+                    <div class="second__line">+38 (067) 326 95 92</div>
                 </div>
-                <div class="list__item--burger">
+                <div class="list__item--third">
                     <div class="icon"><img src="../images/Vector2.png" alt=""></div>
-                    <div class="burger__line">+38 (050) 366 17 77</div>
+                    <div class="third__line">+38 (050) 366 17 77</div>
                 </div>
             </li>
         </ul>
